<resources>
    <string name="app_name">Minha Pizzaria</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="logar_email">Entrar com o email</string>
    <string name="logar_facebook">Entrar com o facebook</string>
    <string name="logar_google">Entrar com o Google</string>
    <string name="text_cadastrar">Cadastrar-se</string>
    <string name="nome">Nome</string>
    <string name="confirmacao_senha">Confirme sua senha</string>
    <string name="cadastrar">Cadastrar</string>
    <!-->
    Bloco de códigos do Facebook
    <-->
    <string name="facebook_app_id">266160540606075</string>
    <string name="fb_login_protocol_scheme">fb266160540606075</string>

    <string name="sair">Sair</string>
    <string name="adicionar_produto">Adicionar produto</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="novo_pedido">Novo pedido</string>
    <string name="quantidade">Quantidade:</string>
    <string name="adicionar">Adicionar</string>
    <string name="total">Total:</string>

</resources>
